@@ -10,8 +10,9 @@ function EFFECT:Init( data )
 	self.DirVec = data:GetNormal()
 	self.Radius = math.max(data:GetRadius()/50,1)
 	self.Emitter = ParticleEmitter( self.Origin )
+	self.ParticleMul = tonumber(LocalPlayer():GetInfo("acf_cl_particlemul")) or 1
 	
-	for i=0, 3*self.Radius do
+	for i=0, 3*self.Radius*self.ParticleMul do
 
 		local Smoke = self.Emitter:Add( "particle/smokesprites_000"..math.random(1,9), self.Origin )
 		if (Smoke) then
@@ -31,7 +32,7 @@ function EFFECT:Init( data )
 
 	end
 	
-	for i=0, 4*self.Radius do
+	for i=0, 4*self.Radius*self.ParticleMul do
 	
 		local Debris = self.Emitter:Add( "effects/fleck_tile"..math.random(1,2), self.Origin )
 		if (Debris) then
@@ -50,7 +51,7 @@ function EFFECT:Init( data )
 		end
 	end
 		
-	for i=0, 5*self.Radius do
+	for i=0, 5*self.Radius*self.ParticleMul do
 	
 		local Embers = self.Emitter:Add( "particles/flamelet"..math.random(1,5), self.Origin )
 		if (Embers) then
