@@ -10,6 +10,7 @@ function EFFECT:Init( data )
 	self.DirVec = data:GetNormal()
 	self.Radius = math.max(data:GetRadius()/50,1)
 	self.Emitter = ParticleEmitter( self.Origin )
+	self.ParticleMul = tonumber(LocalPlayer():GetInfo("acf_cl_particlemul")) or 1
 	
 	local ImpactTr = { }
 		ImpactTr.start = self.Origin - self.DirVec*20
@@ -70,7 +71,7 @@ function EFFECT:Init( data )
  
 function EFFECT:Core()
 		
-	for i=0, 2*self.Radius do
+	for i=0, 2*self.Radius*self.ParticleMul do
 	 
 		local Flame = self.Emitter:Add( "particles/flamelet"..math.random(1,5), self.Origin)
 		if (Flame) then
@@ -90,7 +91,7 @@ function EFFECT:Core()
 		
 	end
 	
-	for i=0, 4*self.Radius do
+	for i=0, 4*self.Radius*self.ParticleMul do
 	
 		local Debris = self.Emitter:Add( "effects/fleck_tile"..math.random(1,2), self.Origin )
 		if (Debris) then
@@ -109,7 +110,7 @@ function EFFECT:Core()
 		end
 	end
 	
-	for i=0, 5*self.Radius do
+	for i=0, 5*self.Radius*self.ParticleMul do
 	
 		local Embers = self.Emitter:Add( "particles/flamelet"..math.random(1,5), self.Origin )
 		if (Embers) then
@@ -130,7 +131,7 @@ function EFFECT:Core()
 		end
 	end
 	
-	for i=0, 2*self.Radius do
+	for i=0, 2*self.Radius*self.ParticleMul do
 		local Whisp = self.Emitter:Add( "particle/smokesprites_000"..math.random(1,9), self.Origin )
 			if (Whisp) then
 				Whisp:SetVelocity(VectorRand() * math.random( 150,250*self.Radius) )
@@ -148,8 +149,8 @@ function EFFECT:Core()
 			end
 	end
 	
-	if self.Radius > 4 then
-		for i=0, 0.5*self.Radius do
+	if self.Radius*self.ParticleMul > 4 then
+		for i=0, 0.5*self.Radius*self.ParticleMul do
 			local Cookoff = EffectData()				
 				Cookoff:SetOrigin( self.Origin )
 				Cookoff:SetScale( self.Radius/6 )
@@ -167,7 +168,7 @@ function EFFECT:Shockwave( Ground, SmokeColor )
 	local Radius = (1-Ground.Fraction)*self.Radius
 	local Density = 15*Radius
 	local Angle = Ground.HitNormal:Angle()
-	for i=0, Density do	
+	for i=0, Density*self.ParticleMul do	
 		
 		Angle:RotateAroundAxis(Angle:Forward(), (360/Density))
 		local ShootVector = Angle:Up()
@@ -195,7 +196,7 @@ function EFFECT:Metal( SmokeColor )
 
 	self:Core()
 	
-	for i=0, 3*self.Radius do
+	for i=0, 3*self.Radius*self.ParticleMul do
 	
 		local Smoke = self.Emitter:Add( "particle/smokesprites_000"..math.random(1,9), self.Origin )
 		if (Smoke) then
@@ -221,7 +222,7 @@ function EFFECT:Concrete( SmokeColor )
 
 	self:Core()
 	
-	for i=0, 3*self.Radius do
+	for i=0, 3*self.Radius*self.ParticleMul do
 	
 		local Smoke = self.Emitter:Add( "particle/smokesprites_000"..math.random(1,9), self.Origin )
 		if (Smoke) then
@@ -247,7 +248,7 @@ function EFFECT:Dirt( SmokeColor )
 	
 	self:Core()
 	
-	for i=0, 3*self.Radius do
+	for i=0, 3*self.Radius*self.ParticleMul do
 	
 		local Smoke = self.Emitter:Add( "particle/smokesprites_000"..math.random(1,9), self.Origin )
 		if (Smoke) then
@@ -273,7 +274,7 @@ function EFFECT:Sand( SmokeColor )
 	
 	self:Core()
 	
-	for i=0, 3*self.Radius do
+	for i=0, 3*self.Radius*self.ParticleMul do
 	
 		local Smoke = self.Emitter:Add( "particle/smokesprites_000"..math.random(1,9), self.Origin )
 		if (Smoke) then
@@ -299,7 +300,7 @@ function EFFECT:Airburst( SmokeColor )
 
 	self:Core()
 	
-	for i=0, 3*self.Radius do
+	for i=0, 3*self.Radius*self.ParticleMul do
 	
 		local Smoke = self.Emitter:Add( "particle/smokesprites_000"..math.random(1,9), self.Origin )
 		if (Smoke) then
@@ -319,7 +320,7 @@ function EFFECT:Airburst( SmokeColor )
 	
 	end
 	
-	for i=0, 10*self.Radius do
+	for i=0, 10*self.Radius*self.ParticleMul do
 	
 		local AirBurst = self.Emitter:Add( "particle/smokesprites_000"..math.random(1,9), self.Origin )
 		if (AirBurst) then
